[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprites/Player/Player-placeholder.png" type="Texture" id=1]
[ext_resource path="res://Scenes_and_scripts/Player/Player.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 19.0944

[sub_resource type="CircleShape2D" id=2]
radius = 19.9458

[sub_resource type="Animation" id=3]
resource_name = "Pistol"
length = 1.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 6, 9, 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Shotgun"
length = 1.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 7, 10, 1 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Sniper"
length = 1.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 8, 11, 2 ]
}

[node name="Player" type="KinematicBody2D"]
collision_mask = 6
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -14 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
hframes = 3
vframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource( 2 )

[node name="Gun_pos" type="Position2D" parent="."]
position = Vector2( 0, -45 )

[node name="Shoot_timer" type="Timer" parent="."]
one_shot = true

[node name="Reload_timer" type="Timer" parent="."]
one_shot = true

[node name="ShootAnimations" type="AnimationPlayer" parent="."]
playback_speed = 5.0
anims/Pistol = SubResource( 3 )
anims/Shotgun = SubResource( 4 )
anims/Sniper = SubResource( 5 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="timeout" from="Shoot_timer" to="." method="_on_Shoot_timer_timeout"]
[connection signal="timeout" from="Reload_timer" to="." method="_on_Reload_timer_timeout"]
